test/compile-errors/record-privacy-a.crow
private-ctor record
	.new
	x nat

redundant-private-ctor record
	.new
	.y nat

private-mut record mut
	new
	.a mut nat
	b .mut nat
	.c .mut nat
